hphp/test/slow/magic-methods/unset.php.expectf
Fatal error: Magic `__unset` methods are no longer supported in %s/unset.php on line 4
